--- a/PearlManagementMVVM/App.config
+++ b/PearlManagementMVVM/App.config
@@ -9,6 +9,7 @@
   </startup>
   <connectionStrings>
     <add name="PearlsEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-VDBEFIM\SQLEXPRESS;initial catalog=Pearls;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AllPearlsEntities" connectionString="metadata=res://*/Models.DatabaseModels.csdl|res://*/Models.DatabaseModels.ssdl|res://*/Models.DatabaseModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-VDBEFIM\SQLEXPRESS;initial catalog=Pearls;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
